<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Food Uploader</string>

    <string name="connection_status">Connection status:</string>
    <string name="select_menu">Select menu</string>
    <string name="select_table">Select table</string>

    <string name="status_disconnected">Disconnected</string>
    <string name="status_selected_menu">Selected menu</string>
    <string name="status_selected_table">Selected table</string>
    <string name="status_selected_menu_table">Selected menu and table</string>
    <string name="status_connected">Connected</string>
    <string name="status_connecting">Connecting to FTP server</string>
    <string name="status_uploading">Uploading file on server</string>
    <string name="status_success">Operation successful</string>
    <string name="status_error">Connection error</string>
    <string name="upload">Upload</string>

    <string name="alert_file_not_entered">You should pick at least one file to upload to server</string>
    <string name="alert_file_must_be_xlsx">File should have xlsx extension</string>
    <string name="fa_web_icon" translatable="false">&#xf0ac;</string>
</resources>