<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel" type="com.example.fooduploader.MainActivityViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/status_headline"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/connection_status"
            app:layout_constraintEnd_toStartOf="@+id/status_result"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/status_result"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/status_disconnected"
            app:layout_constraintBottom_toBottomOf="@+id/status_headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/status_headline"
            app:layout_constraintTop_toTopOf="@+id/status_headline" />

        <Button
            android:id="@+id/select_menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/select_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status_headline" />

        <Button
            android:id="@+id/select_table_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/select_table"
            app:layout_constraintEnd_toEndOf="@+id/select_menu_btn"
            app:layout_constraintStart_toStartOf="@+id/select_menu_btn"
            app:layout_constraintTop_toBottomOf="@+id/select_menu_btn" />


        <Button
            android:id="@+id/upload_files_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/upload"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintEnd_toEndOf="@+id/select_table_btn"
            app:layout_constraintStart_toStartOf="@+id/select_table_btn"
            app:layout_constraintTop_toBottomOf="@+id/select_table_btn" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/debug_log"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/large_margin"
            android:gravity="center"
            android:padding="@dimen/large_margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upload_files_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>